Add CoordinateTest